SpiderData/51cto/Clean/00440.txt
本文主要介绍Python2(Python 2.7)中,使用sudo python2 get-pip.py命令安装pip报错 sys.stderr.write(f"ERROR: {exc}")的解决方法。

错误信息如下：

Traceback (most recent call last):
  File "get-pip.py", line 24226, in <module>
    main()
  File "get-pip.py", line 199, in main
    bootstrap(tmpdir=tmpdir)
  File "get-pip.py", line 82, in bootstrap
    from pip._internal.cli.main import main as pip_entry_point
  File "/tmp/tmp2aZyDl/pip.zip/pip/_internal/cli/main.py", line 60
    sys.stderr.write(f"ERROR: {exc}")
                                   ^
SyntaxError: invalid syntax

解决方法：​​https://www.cjavapy.com/article/1701/​​

